fix: better quiz buttons for dark mode - still some parts that are not responsive remain

--- a/src/styles/quiz.scss
+++ b/src/styles/quiz.scss
@@ -5,6 +5,7 @@
   padding: 10px 15px 10px 15px;
   margin: 10px 15px 10px 15px;
   border-radius: 1rem;
+  font-family: unset !important;
 }
 
 .react-quiz-container {
@@ -24,11 +25,10 @@
 
   
   .btn {
-    font-family: unset !important;
     border-radius: 6px !important;
     margin-right: 0.5em;
     margin-left: 0.5em;
-    &:not(:disabled):hover {
+    &:not(:disabled):not(.incorrect):hover {
       filter: brightness(105%);
       opacity: 0.9;
     }
@@ -39,11 +39,9 @@
     &:disabled {
       // color: var(--fgColor-default, var(--color-fg-default)) !important;
       // background-color: var(--bgColor-default, var(--color-bg-default))  !important;
-      cursor:default;
-      filter: brightness(90%);
-      opacity: 0.5;
+      cursor: not-allowed;
+      opacity: 0.6;
     }
-   
     img {
       max-width: 250px;
     }
@@ -60,4 +58,10 @@
     border-radius: 0.5rem;
   }
 
+  .incorrect {
+    cursor: not-allowed !important;
+    pointer-events: none;
+    opacity: 0.6;
+  }
+ 
 }
